infra/k8s/auth.yaml
apiVersion: v1
kind: Pod
metadata:
  name: auth
spec: 
  containers:
    - name: auth
      image: exalkas/ticketsauth
