infra/k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
#number of replicas of a pod we want to run
  replicas: 1
  # selector: find the pods with label app and value auth
  # label could be any name and not necessarily app
  selector:
    matchLabels:
      app: auth
  template:
  # the configuration that will be applied to the pod that will be created
    metadata:
      labels:
        # label for the pod
        app: auth
    spec: 
      containers:
        # the name is used for login purposes
        - name: auth
          image: exalkas/auth
          imagePullPolicy: Never
#define services
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  # select all pods with name auth
  app: auth
  ports: 
    - name: auth
    protocol: TCP:
    # depends on which port our server listens
    port: 3000
    targetPort: 3000
