infra/k8s/auth-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: auth-srv
spec:
  type: NodePort
  # select the pods to expose
  selector:
  # find the pods with label auth:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      # port is the Node Port service port
      # targetport is the port of the pod inside the node
      port: 5000
      targetPort: 5000
